solve bug conflict z-index navigation and table of content

--- a/app/assets/stylesheets/components/navigations/_table_of_content.scss
+++ b/app/assets/stylesheets/components/navigations/_table_of_content.scss
@@ -2,6 +2,7 @@
   padding: 0.25rem;
   background-color: $bg-clear-tone;
   font-family: var(--ff-handwrite);
+  z-index: 1;
 
   h5 {
     background-color: $complementary;
